--- a/public/6d0db87f39a71be2cdf0.md
+++ b/public/6d0db87f39a71be2cdf0.md
@@ -25,8 +25,8 @@ ignorePublish: false
 
 ### tex
 
-[vscode](https://qiita.com/muuuusann/items/f267219f39a44fc9ad1a)
-texのフォーマッター
+[vscode](https://qiita.com/muuuusann/items/f267219f39a44fc9ad1a "vscodeの設定")
+[texのフォーマッター](https://qiita.com/muuuusann/items/4a91b3bafbd2c9790553 "texのフォーマッターの設定")
 
 ### HTML
 
