--- a/public/f267219f39a44fc9ad1a.md
+++ b/public/f267219f39a44fc9ad1a.md
@@ -10,4 +10,42 @@ organization_url_name: null
 slide: false
 ignorePublish: false
 ---
-執筆中
+## 拡張機能
+
+Japanese Language Pack for Visual Studio Code
+LaTeX Workshop
+
+## 設定
+
+```json:setting.json
+{
+  "latex-workshop.latex.autoBuild.run": "onSave",
+  "latex-workshop.latex.autoClean.run": "onFailed",
+  "latex-workshop.latex.recipe.default": "CompLite",
+  "latex-workshop.view.pdf.viewer": "tab",
+  "latex-workshop.latex.recipes": [
+    {
+      "name": "CompLite",
+      "tools": ["platex","dvipdfmx"]
+    }
+  ],
+  "latex-workshop.latex.tools": [
+    {
+      "args": [
+        "-file-line-error",
+        "-interaction=nonstopmode",
+        "-halt-on-error",
+        "%DOCFILe%.tex"
+      ],
+      "command": "platex",
+      "env": {},
+      "name": "platex"
+    },
+    {
+      "args": ["%DOCFILE%.dvi"],
+      "command": "dvipdfmx",
+      "name": "dvipdfmx"
+    }
+  ],
+}
+```
