--- a/public/f267219f39a44fc9ad1a.md
+++ b/public/f267219f39a44fc9ad1a.md
@@ -37,16 +37,15 @@ vscodeでtexを使うときに必須の拡張機能2つです
     {
       "args": [
         "-file-line-error",
-        "-interaction=nonstopmode",
         "-halt-on-error",
-        "%DOCFILe%.tex"
+        "%DOC%.tex"
       ],
       "command": "platex",
       "env": {},
       "name": "platex"
     },
     {
-      "args": ["%DOCFILE%.dvi"],
+      "args": ["%DOC%.dvi"],
       "command": "dvipdfmx",
       "name": "dvipdfmx"
     }
